fix button mijn ns zakelijk login on mobile

--- a/_sass/templates.mz.scss
+++ b/_sass/templates.mz.scss
@@ -54,6 +54,23 @@
     }
 }
 
+.mz-cta__button {
+    margin-bottom: $half-gutter;
+    min-width: 132px;
+    width: 100%;
+
+    @include sm {
+        margin-bottom: 0;
+        width: auto;
+    }
+
+    &.is-loading,
+    &.is-loading:hover {
+        background-color: $ns-light-blue;
+        box-shadow: inset 0 -2px $ns-light-blue-2;
+    }
+}
+
 
 // tile
 // ----------------------------------
